--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,13 +5,23 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Wild Series{% endblock %}</title>
-        <link rel="stylesheet" href="assets/css/style.css">
+
+        <link rel="stylesheet" href="/build/css/app.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Asul:wght@400;700&display=swap" rel="stylesheet">
-        {% block stylesheets %}{% endblock %}
+
+        {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
+        {% endblock %}
     </head>
+    <header>
+        {% include "includes/_navbar.html.twig" %}
+    </header>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
+        <script src="/build/app.js"></script>
     </body>
 </html>
