--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -1,5 +1,15 @@
 {% extends 'base.html.twig' %}
-{% block title %}{{ parent() }} | Program {{ id }}{% endblock %}
+{% block title %}{{ parent() }} | Série #{{ program.id }}{% endblock %}
 {% block body %}
-    <h1>Série n°{{ id }}</h1>
+    <h1>{{ program.title }}</h1>
+    <div class="media">
+        <img class="align-self-start mr-3" src="{{ program.poster }}" alt="{{ program.title }} poster">
+        <div class="media-body">
+            <h2 class="mt-0">{{ program.title }}</h2>
+            <p>{{ program.summary }}</p>
+            <p>Catégorie : {{ program.category.name }}</p>
+        </div>
+    </div>
+
+    <a href="{{ path('program_index') }}">Retour à la liste des programmes</a>
 {% endblock %}
