--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -1,1 +1,16 @@
 {% extends 'base.html.twig' %}
+{% block title %}{{ parent() }} | Programs{% endblock %}
+{% block body %}
+    <h1>Toutes les séries de la table 'program' :</h1>
+    {% for program in programs %}
+        <div>
+            <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
+            <p>{{ program.summary }}</p>
+            <a href="{{ path('program_show', { id: program.id }) }}">Voir la fiche</a>
+        </div>
+    {% else %}
+        Aucune série trouvée.
+    {% endfor %}
+
+    <a href="{{ path('app_index') }}">Retour à l'accueil</a>
+{% endblock %}
