--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -8,6 +8,9 @@
             <h2 class="mt-0">{{ program.title }}</h2>
             <p>{{ program.summary }}</p>
             <p>Catégorie : {{ program.category.name }}</p>
+            {% for season in program.seasons %}
+                <a href="{{ path('program_season_show', {programId: program.id, seasonId: season.id}) }}">{{ season.number }}</a>
+            {% endfor %}
         </div>
     </div>
 
