--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -9,7 +9,7 @@
             <p>{{ program.summary }}</p>
             <p>Catégorie : {{ program.category.name }}</p>
             {% for season in program.seasons %}
-                <a href="{{ path('program_season_show', {programId: program.id, seasonId: season.id}) }}">{{ season.number }}</a>
+                <a href="{{ path('program_season_show', {program: program.id, season: season.id}) }}">{{ season.number }}</a>
             {% endfor %}
         </div>
     </div>
