--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    {{ form_start(form) }}
+    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
     {{ form_widget(form) }}
     <input type='submit' value='Ajouter une série'>
     {{ form_end(form) }}
