--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -17,7 +17,7 @@
     <strong>Acteurs :</strong>
     <ul>
         {% for actor in program.actors %}
-            <li>{{ actor.name }} </li>
+            <li><a href="{{ path("actor_show", { id: actor.id }) }}">{{ actor.name }}</a></li>
         {% else %}
             <li>Aucun acteur pour cette série</li>
         {% endfor %}
