--- a/templates/episode/_form.html.twig
+++ b/templates/episode/_form.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    {{ form_row(form.actors) }}
+{#    {{ form_row(form.actors) }}#}
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
