--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -6,7 +6,7 @@
         <div>
             <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
             <p>{{ program.summary }}</p>
-            <a href="{{ path('program_show', { id: program.id }) }}">Voir la fiche</a>
+            <a href="{{ path('program_show', { slug: program.slug }) }}">Voir la fiche</a>
         </div>
     {% else %}
         Aucune série trouvée.
