--- a/templates/includes/_navbar.html.twig
+++ b/templates/includes/_navbar.html.twig
@@ -23,9 +23,14 @@
                     <a class="dropdown-item" href="#">Something else here</a>
                 </div>
             </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                {% if app.user %}
+                    {{ app.user.email }}
+                    <a href="{{ path('app_logout') }}"> Se déconnecter</a>
+                {% else %}
+                    <a href="{{ path('app_login') }}"> Se connecter</a>
+                {% endif %}
+            </div>
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
