--- a/templates/episode/edit.html.twig
+++ b/templates/episode/edit.html.twig
@@ -9,5 +9,5 @@
 
     <a href="{{ path('episode_index') }}">back to list</a>
 
-    {{ include('episode/_delete_form.html.twig') }}
+    {{ include('episode/_delete.html.twig') }}
 {% endblock %}
