--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -30,5 +30,5 @@
 
     <a href="{{ path('episode_edit', {slug: episode.slug}) }}">edit</a>
 
-    {{ include('episode/_delete_form.html.twig') }}
+    {{ include('episode/_delete.html.twig') }}
 {% endblock %}
