--- a/templates/season/show.html.twig
+++ b/templates/season/show.html.twig
@@ -30,5 +30,5 @@
 
     <a href="{{ path('season_edit', {'id': season.id}) }}">edit</a>
 
-    {{ include('season/_delete_form.html.twig') }}
+    {{ include('season/_delete.html.twig') }}
 {% endblock %}
