--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <h1>Add a new category</h1>
     {{ form_start(form) }}
     {{ form_widget(form) }}
     <input type='submit' value='Ajouter une catégorie'>
