--- a/templates/program/edit.html.twig
+++ b/templates/program/edit.html.twig
@@ -9,5 +9,5 @@
 
     <a href="{{ path('program_index') }}">back to list</a>
 
-    {{ include('program/_delete_form.html.twig') }}
+    {{ include('program/_delete.html.twig') }}
 {% endblock %}
