--- a/templates/program/episode_show.html.twig
+++ b/templates/program/episode_show.html.twig
@@ -14,6 +14,9 @@
             <p>Auteur : {{ comment.author.email }}</p>
             <p>Note : {{ comment.rate }}</p>
             <p>Commentaire : {{ comment.comment }}</p>
+            {% if is_granted("ROLE_ADMIN") or app.user == comment.author %}
+                {{ include('comment/_delete.html.twig') }}
+            {% endif %}
         </li><br>
         {% else %}
             <p>Aucun commentaire n'a été rédigé pour cet épisode.</p>
