--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <h1>Create a new program</h1>
     {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
     {{ form_widget(form) }}
     <input type='submit' value='Ajouter une série'>
