--- a/templates/season/edit.html.twig
+++ b/templates/season/edit.html.twig
@@ -9,5 +9,5 @@
 
     <a href="{{ path('season_index') }}">back to list</a>
 
-    {{ include('season/_delete_form.html.twig') }}
+    {{ include('season/_delete.html.twig') }}
 {% endblock %}
