--- a/templates/includes/_navbar.html.twig
+++ b/templates/includes/_navbar.html.twig
@@ -26,9 +26,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 {% if app.user %}
                     {{ app.user.email }}
-                    <a href="{{ path('app_logout') }}"> Se déconnecter</a>
+                    <a href="{{ path('app_logout') }}">Se déconnecter</a>
+                    <a href="{{ path('app_profile') }}">My account</a>
                 {% else %}
-                    <a href="{{ path('app_login') }}"> Se connecter</a>
+                    <a href="{{ path('app_login') }}">Se connecter</a>
+                    <p>Vous ne possédez pas encore de compte ? <a href="{{ path('app_register') }}">Inscrivez-vous !</a></p>
                 {% endif %}
             </div>
         </ul>
