--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -2,6 +2,12 @@
 {% block title %}{{ parent() }} | Programs{% endblock %}
 {% block body %}
     <h1>Toutes les séries de la table 'program' :</h1>
+
+    {{ form_start(form) }}
+    {{ form_widget(form) }}
+    <button>Search</button>
+    {{ form_end(form) }}
+    <br>
     {% for program in programs %}
         <div>
             <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
