--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,13 @@
 </head>
 <header>
     {% include "includes/_navbar.html.twig" %}
+    {% for category, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ category }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endfor %}
 </header>
 <body>
 {% block body %}{% endblock %}
