--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/build/app.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Asul:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a844a861d9.js" crossorigin="anonymous"></script>
 
     {% block stylesheets %}
         {{ encore_entry_link_tags('app') }}
