--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -6,6 +6,13 @@
         <img class="align-self-start mr-3" src="{{ program.poster }}" alt="{{ program.title }} poster">
         <div class="media-body">
             <h2 class="mt-0">{{ program.title }}</h2>
+            {% if app.user %}
+                <a id="watchlist">
+                    <i id="watchlistIcon"
+                       class="{{ app.user.isInWatchlist(program) ? 'fas' : 'far' }} fa-heart watchlist"
+                       data-href="{{ path("program_watchlist", { "id": program.id}) }}"></i>
+                </a>
+            {% endif %}
             <p>{{ program.summary }}</p>
             <p>Catégorie : {{ program.category.name }}</p>
             {% for season in program.seasons %}
@@ -26,4 +33,7 @@
     {{ include('program/_delete_form.html.twig') }}
 
     <a href="{{ path('program_index') }}">Retour à la liste des programmes</a>
+{% endblock %}{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('watchlist') }}
 {% endblock %}
