--- a/templates/includes/_navbar.html.twig
+++ b/templates/includes/_navbar.html.twig
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -13,14 +14,14 @@
                 <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false">
                     Dropdown
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    {{ render(controller(
+                        'App\\Controller\\DefaultController::navbarTop'
+                    )) }}
                 </div>
             </li>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -30,7 +31,8 @@
                     <a href="{{ path('app_profile') }}">My account</a>
                 {% else %}
                     <a href="{{ path('app_login') }}">Se connecter</a>
-                    <p>Vous ne possédez pas encore de compte ? <a href="{{ path('app_register') }}">Inscrivez-vous !</a></p>
+                    <p>Vous ne possédez pas encore de compte ? <a href="{{ path('app_register') }}">Inscrivez-vous !</a>
+                    </p>
                 {% endif %}
             </div>
         </ul>
