--- a/templates/episode/new.html.twig
+++ b/templates/episode/new.html.twig
@@ -1,11 +1,7 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}New Episode{% endblock %}
-
+{% block title %}{{ 'episode.add'|trans }}{% endblock %}
 {% block body %}
-    <h1>Create new Episode</h1>
-
+    <h1>{{ 'episode.add'|trans }}</h1>
     {{ include('episode/_form.html.twig') }}
-
-    <a href="{{ path('episode_index') }}">back to list</a>
+    <a href="{{ path('episode_index') }}">{{ 'back.episodeList'|trans }}</a>
 {% endblock %}
