--- a/templates/program/edit.html.twig
+++ b/templates/program/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Program{% endblock %}
+{% block title %}{{ 'program.edit'|trans }}{% endblock %}
 
 {% block body %}
-    <h1>Edit Program</h1>
+    <h1>{{ 'program.edit'|trans }}</h1>
 
     {{ include('program/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('program_index') }}">back to list</a>
+    <a href="{{ path('program_index') }}">{{ 'back.programList'|trans }}</a>
 
     {{ include('program/_delete.html.twig') }}
 {% endblock %}
