--- a/templates/season/edit.html.twig
+++ b/templates/season/edit.html.twig
@@ -1,13 +1,8 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Edit Season{% endblock %}
-
+{% block title %}{{ 'season.edit'|trans }}{% endblock %}
 {% block body %}
-    <h1>Edit Season</h1>
-
+    <h1>{{ 'season.edit'|trans }}</h1>
     {{ include('season/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('season_index') }}">back to list</a>
-
+    <a href="{{ path('season_index') }}">{{ 'back.seasonList'|trans }}</a>
     {{ include('season/_delete.html.twig') }}
 {% endblock %}
