--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %}{{ parent() }} | Catégorie {{ category.name }}{% endblock %}
+{% block title %}{{ parent() }} | {{ 'category.category'|trans }} {{ category.name }}{% endblock %}
 {% block body %}
     <h1>{{ category.name }}</h1>
 
@@ -9,12 +9,12 @@
         <div class="media-body">
             <h2 class="mt-0">{{ program.id }}/ {{ program.title }}</h2>
             <p>{{ program.summary }}</p>
-            <a href="{{ path('program_show', { slug : program.slug }) }}">Voir la série</a>
+            <a href="{{ path('program_show', { slug : program.slug }) }}">{{ 'program.show'|trans }}</a>
         </div>
     </div>
     {% else %}
-        Aucune série trouvée dans cette catégorie.
+        {{ 'category.noProgramsFound'|trans }}
     {% endfor %}
 
-    <a href="{{ path('program_index') }}">Retour à la liste des programmes</a>
+    <a href="{{ path('program_index') }}">{{ 'back.programList'|trans }}</a>
 {% endblock %}
