--- a/templates/episode/edit.html.twig
+++ b/templates/episode/edit.html.twig
@@ -1,13 +1,8 @@
 {% extends 'base.html.twig' %}
-
-{% block title %}Edit Episode{% endblock %}
-
+{% block title %}{{ parent() }} | {{ 'episode.edit'|trans }}{% endblock %}
 {% block body %}
-    <h1>Edit Episode</h1>
-
+    <h1>{{ 'episode.edit'|trans }}</h1>
     {{ include('episode/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('episode_index') }}">back to list</a>
-
+    <a href="{{ path('episode_index') }}">{{ 'back.episodeList'|trans }}</a>
     {{ include('episode/_delete.html.twig') }}
 {% endblock %}
