--- a/templates/program/_delete_form.html.twig
+++ b/templates/program/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('program_delete', {'id': program.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ program.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn">{{ 'form.delete'|trans }}</button>
 </form>
