--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -1,22 +1,22 @@
 {% extends 'base.html.twig' %}
-{% block title %}{{ parent() }} | Programs{% endblock %}
+{% block title %}{{ parent() }} | {{ 'series.series'|trans }}{% endblock %}
 {% block body %}
-    <h1>Toutes les séries de la table 'program' :</h1>
+    <h1>{{ 'program.list'|trans }}</h1>
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button>Search</button>
+    <button>{{ 'search.search'|trans }}</button>
     {{ form_end(form) }}
     <br>
     {% for program in programs %}
         <div>
-            <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
+            <h2>{{ loop.index }} / {{ program.title }} - {{ 'categories.category'|trans }} : {{ program.category.name }}</h2>
             <p>{{ program.summary }}</p>
-            <a href="{{ path('program_show', { slug: program.slug }) }}">Voir la fiche</a>
+            <a href="{{ path('program_show', { slug: program.slug }) }}">{{ 'program.show'|trans }}</a>
         </div>
     {% else %}
-        Aucune série trouvée.
+        {{ 'programs.noProgramsFound' }}
     {% endfor %}
 
-    <a href="{{ path('app_index') }}">Retour à l'accueil</a>
+    <a href="{{ path('app_index') }}">{{ 'back.home'|trans }}</a>
 {% endblock %}
