--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>{{ program.title }}</h1>
     <div class="media">
-        <img class="align-self-start mr-3" src="{{ program.poster }}" alt="{{ program.title }} poster">
+        <img class="align-self-start mr-3" style="width: 500px;"src="{{ asset('uploads/' ~ program.poster) }}" alt="{{ program.title }} poster">
         <div class="media-body">
             <h2 class="mt-0">{{ program.title }}</h2>
             {% if app.user %}
